# torque_vectoring

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .nvim.lua  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  package.xml  pre-commit_copy.sh  tidy-code.sh
.github/workflows/: codebase-diagram.yml  docker-ci.yml  stale.yml
config/: parameters.yaml
docs/: ros_messages.md  tire_forces.md  tv.md
include/: config.hpp  interfaces.hpp  orchestrator.hpp  ros_interface.hpp  types.hpp
include/tv/: kinematic_force_estimator.hpp  pid_yaw_controller.hpp  qp_torque_allocator.hpp  smc_yaw_controller.hpp
launch/: launch.py
scripts/: example_time_subscriber.py
src/: example_time_publisher.cpp  main.cpp
