cmake_minimum_required(VERSION 3.8)

project(torque_vectoring_pkg)

# Default to C++17
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 20)
  set(CMAKE_CXX_STANDARD_REQUIRED ON)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(OsqpEigen REQUIRED)
find_package(vehicle_params_cpp REQUIRED)

# Include directories
include_directories(include)

# C++ executable
add_executable(torque_vectoring_node src/main.cpp)

ament_target_dependencies(torque_vectoring_node
  rclcpp
  std_msgs
  sensor_msgs
)
target_link_libraries(torque_vectoring_node Eigen3::Eigen OsqpEigen::OsqpEigen vehicle_params_cpp::vehicle_params_cpp)

# Install C++ executables
install(TARGETS
  torque_vectoring_node
  DESTINATION lib/${PROJECT_NAME}
)

# Install Python modules (for importable Python code)

# Install Python executables

# Install launch files
install(DIRECTORY
  launch
  DESTINATION share/${PROJECT_NAME}
)

# Install config files
install(DIRECTORY
  config
  DESTINATION share/${PROJECT_NAME}
)

# Install include directory
install(DIRECTORY
  include/
  DESTINATION include
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
